--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,6 +84,21 @@ main h2{
     margin-right: auto;
 }
 
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  flex-direction: row;
+  max-height: 30%;
+  justify-content: center;
+}
+.cards img {
+  margin: 5px;
+  border: 3px solid #000;
+  box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.3);
+  max-width: 30%;
+}
+
 .breadcrumb {
             margin: 10px;
             font-size: 14px;
